# zornq

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
code/: _debug_af.py  adversarial_gadget_generator.py  adversarial_instance_generator.py  anytime_solver.py  apply_patches.py  audit_trail.py  auto_dispatcher.py  auto_planner.py  b101_fourier.py  b104_boundary.py  b107_nogood.py  b109_adversarial.py  b10_2d_connectivity.py  b10b_2d_optimizer.py  b10b_gamma_analysis.py  b10d_fast_engine.py  b10e_benchmark.py  b10e_pepo.py  b10g_ctscan.py  b10h_2d_info_loss.py  b10h_info_loss.py  b11_hierarchical_forces.py  b12_algebra_hierarchy.py  b12_benchmark.py  b12_chirality_fano.py  b12_octonion_spinor.py  b12c_perturbative_qaoa.py  b12d_chi4_mechanism.py  b12e_ttl_test.py  b13_physics_labels.py  b13b_symmetry_truncation.py  b14_mera.py  b153_benchmark.py  b153_qubo_suite.py  b154_biqmac_loader.py  b154_combined_leaderboard.py  b154_dimacs_loader.py  b156_benchmark.py  b156_sos2_sdp.py  b158_benchmark.py  (+221 more)
code/logs/20260412_215850_nachtrun/: summary.json
code/logs/20260413_000016_nachtrun/: summary.json
code/logs/b150_test_benchmark/: benchmark.capsule.json  benchmark.json  benchmark.receipt.json  benchmark_checkpoint.json
code/logs/b150_test_capsule/: report.capsule.json  report.json  report.receipt.json
code/zorn_solver/: __init__.py  api.py  common___init__.py  common_configs.py  common_profiling.py  common_protocols.py  common_results.py  common_rng.py  controller.py  dual_probe.py  graph_types.py  invariants.py  policy_triage.py  policy_tropical.py  zorn_core.py
code/zorn_solver/tests/: test_solver_smoke.py  test_triage_policy.py  test_zorn_core_properties.py
docs/: B176c_RESULTS.md  B176c_RUNBOOK_ANTIGRAVITY.md  ZornQ_Backlog_Prioriteit.docx  b10_2d_connectivity.md  b10b_2d_parameter_optimization.md  b10c_chi_truncation.md  b10d_fast_engine.md  b10h_info_loss.md  b11_hierarchical_forces.md  b12_algebraic_hierarchy.md  b1_schaalbaarheid.md  b2_heranalyse_rank_mps_chsh.md  b2_minimale_operatieset.md  b3_reconstructie.md  b5_universaliteit_diepte.md  b6_route_tests.md  b6b_lokale_verwachtingswaarden.md  b6c_zorn_vqe_mps.md  b6e_analyse_8d_octonion.md  b6e_zorn_triplet_dmrg.md  b6f_3d_layer_dmrg.md  b6g_4d_hyperslab_dmrg.md  b7_tebd_3d.md  b7b_adaptive_tebd.md  b7c_heisenberg_picture.md  b7d_heisenberg_mpo_qaoa.md  b8_zorn_mpo.md  b9_qaoa_optimizer.md  backlog_prioriteit.md  batch_benchmark_results.md  lightcone_vergelijking.html  octonion_architectuur.md  onderzoek_b83_b90.md  zorn_mps_architectuur.md  zorn_paper_v0_draft.md  zorn_paper_v1.md  zorn_paper_v2.md  zornq_backlog.md  ~$rnQ_Backlog_Prioriteit.docx
docs/paper/: B179_BUNDLE_SPEC.md  B179_PAPER_PATCH.md  B179_PREFLIGHT_2026-04-17.md  B179_RUNBOOK_ANTIGRAVITY.md  Makefile  REVIEW_PASS_2026-04-17.md  ZENODO_CHECKSUMS.md  main.tex  neurips_2026.sty  neurips_paper_checklist.tex  refs.bib  review_notes.md  split_paper.py  supplementary.tex
docs/paper/data/: b154_leaderboard.csv  b154_leaderboard.json  b154_leaderboard.tex  b165b_hardware_rows.json  b176b_cgal_results.csv  b176b_cgal_results.json  b176c_micro.csv  b186_selector_results.csv  b186_selector_results.json  b49_anytime_trace.csv  b49_anytime_trace.json  ilp_scaling.csv  ilp_scaling.json  ilp_scaling.tex
docs/paper/figures/: b165b_hardware_comparison.tex  b49_anytime_plot.tex
docs/paper/hardware/: B165b_README.md
docs/paper/hardware/baselines/: 3reg8_calibration_mirror.json  3reg8_depolarising.json  3reg8_noiseless.json  myciel3_calibration_mirror.json  myciel3_depolarising.json  myciel3_noiseless.json
docs/paper/hardware/jobs/: prepared_3reg8.json  prepared_myciel3.json
docs/paper/tables/: b165b_hardware_table.md  b165b_hardware_table.tex  b176b_scale_table.md  b176b_scale_table.tex  b186_selector_table.md  b186_selector_table.tex
